<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    >
  <com.google.android.material.appbar.MaterialToolbar
      android:id="@+id/toolbar"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      style="@style/Widget.MaterialComponents.Toolbar.Primary"
      />
  <com.vanniktech.emoji.material.EmojiMaterialButton
      android:id="@+id/button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="16dp"
      />
  <!-- This one gets automatically replaced into a EmojiMaterialButton as we're using a MaterialEmojiLayoutFactory. -->
  <Button
      android:id="@+id/dialog_button"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:text="Emojis in Dialog 💬"
      tools:ignore="HardcodedText"
      />
  <!-- This one gets automatically replaced into a EmojiMaterialButton as we're using a MaterialEmojiLayoutFactory. -->
  <Button
      android:id="@+id/custom_view"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:text="Custom View 🖼️"
      tools:ignore="HardcodedText"
      />
  <!-- This one gets automatically replaced into a EmojiMaterialButton as we're using a MaterialEmojiLayoutFactory. -->
  <Button
      android:id="@+id/emojis"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:text="Emojis without keyboard ⌨️️"
      tools:ignore="HardcodedText"
      />
  <com.vanniktech.emoji.EmojiCheckbox
      android:id="@+id/disableKeyboardInput"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="12dp"
      android:text="Disable keyboard input 🎹"
      tools:ignore="HardcodedText"
      />
  <com.vanniktech.emoji.EmojiCheckbox
      android:id="@+id/forceSingleEmoji"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="12dp"
      android:text="Force single Emoji 🔥"
      tools:ignore="HardcodedText"
      />
  <com.vanniktech.emoji.EmojiCheckbox
      android:id="@+id/searchInPlace"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="12dp"
      android:text="Search in place with :query 🔎"
      tools:ignore="HardcodedText"
      />
  <androidx.recyclerview.widget.RecyclerView
      android:id="@+id/recyclerView"
      android:layout_width="match_parent"
      android:layout_height="0dp"
      android:layout_weight="1"
      />
  <LinearLayout
      android:id="@+id/chat"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:background="@color/chat_input_background"
      android:gravity="center_vertical"
      android:orientation="horizontal"
      android:padding="4dp"
      >
    <ImageButton
        android:id="@+id/chatEmoji"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="12dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/ic_emojis"
        tools:ignore="ContentDescription"
        />
    <com.vanniktech.emoji.EmojiEditText
        android:id="@+id/chatEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:hint="Type a message ..."
        android:imeOptions="actionSend"
        android:importantForAutofill="no"
        android:inputType="textCapSentences|textMultiLine"
        android:maxLines="3"
        tools:ignore="HardcodedText,LabelFor"
        />
    <ImageView
        android:id="@+id/chatSend"
        android:layout_width="48dp"
        android:layout_height="48dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="12dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/ic_send"
        tools:ignore="ContentDescription"
        />
  </LinearLayout>
</LinearLayout>
